// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wind component should render correctly when straight on wind 1`] = `
<styled.div>
  Wind speed: 
  50
   m/s 
  <br />
  0
</styled.div>
`;

exports[`Wind component should render correctly when wind is at angle 1`] = `
<styled.div>
  Wind speed: 
  50
   m/s 
  <br />
  <span>
    Wind direction: 
    W
  </span>
</styled.div>
`;
